appId: com.tihshkel.x018BY
env:
  E2E_FRIEND_NAME: Подруга E2E
---
- runFlow:
    file: ../03-album-create/create-diary.yaml
- tapOn:
    id: page-card-41
- extendedWaitUntil:
    visible:
      id: form-save
    timeout: 15000
- tapOn:
    text: 'Введите'
    optional: true
- inputText: ${E2E_FRIEND_NAME}
- tapOn:
    id: form-save
- extendedWaitUntil:
    visible:
      text: 'Предпросмотр'
    timeout: 20000
