appId: com.tihshkel.x018BY
---
- runFlow:
    file: ../03-album-create/create-diary.yaml
- tapOn:
    id: page-card-57
- extendedWaitUntil:
    visible:
      id: photo-save
    timeout: 15000
- tapOn:
    id: photo-save
- extendedWaitUntil:
    visible:
      text: 'Предпросмотр'
    timeout: 20000
