appId: com.tihshkel.x018BY
---
- runFlow:
    file: ../03-album-create/create-diary.yaml
- tapOn:
    id: page-card-60
- extendedWaitUntil:
    visible:
      text: 'Предпросмотр'
    timeout: 15000
- assertNotVisible:
    id: form-save
