appId: com.tihshkel.x018BY
---
- runFlow:
    file: ../03-album-create/create-pregnancy.yaml
- tapOn:
    id: page-card-1
- extendedWaitUntil:
    visible:
      id: form-save
    timeout: 15000
- tapOn:
    text: 'Введите'
    optional: true
- inputText: Беременность E2E
- tapOn:
    id: form-save
- extendedWaitUntil:
    visible:
      text: 'Предпросмотр'
    timeout: 20000
